# Code-Challenge-Go-Python

./: .gitignore  README.md  docker-compose.yaml
.github/workflows/: go.yml  python.yml
client/: Dockerfile  main.py  pyproject.toml
client/config/: app.py
client/handler/: __init__.py  cli_interface.py  response.py
client/services/commands/: user.py
client/services/queries/: user.py
client/utils/: response.py
docs/: Code-Challenge.postman_collection.json  server.json  server.yaml
server/: Dockerfile  go.mod  go.sum
server/api/handlers/: health.go
server/api/helpers/: base_response.go
server/api/middlewares/: cors.go
server/api/routers/: user.go
server/cmd/: main.go
server/config/: config-development.yaml  config-docker.yaml  config.go
server/db/: redis.go
server/models/: user.go
