[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["Reza Mobaraki <rezam578@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
rich = "^13.7.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
